import static org.jetbrains.kotlin.gradle.dsl.JvmTarget.JVM_17
import static org.jetbrains.kotlin.gradle.dsl.KotlinVersion.KOTLIN_1_9

buildscript {
    Properties constants = new Properties()
    file("$projectDir/../constants.properties").withInputStream { constants.load(it) }

    ext {
        corda_enterprise_release_group = constants.getProperty("cordaEnterpriseReleaseGroup")
        corda_os_release_group = constants.getProperty("cordaOsReleaseGroup")
        corda_enterprise_release_version = constants.getProperty("cordaEnterpriseVersion")
        corda_os_release_version = constants.getProperty("cordaOsVersion")
        corda_gradle_plugins_version = constants.getProperty("gradlePluginsVersion")
        corda_solana_notary_version = constants.getProperty("cordaSolanaNotaryVersion")
        corda_tokens_release_version = constants.getProperty("cordaTokensVersion")
        corda_shell_version = constants.getProperty("cordaShellVersion")
        sava_version = constants.getProperty("savaVersion")
        corda_platform_version = constants.getProperty("platformVersion").toInteger()
        kotlin_version = constants.getProperty("kotlinVersion")
        junit_version = constants.getProperty("junitVersion")
        corda_bridging_token_release_version = "0.1.0"

        testJvmArgs = ['--add-opens', 'java.base/java.time=ALL-UNNAMED', '--add-opens', 'java.base/java.io=ALL-UNNAMED',
                       '--add-opens', 'java.base/java.util=ALL-UNNAMED', '--add-opens', 'java.base/java.net=ALL-UNNAMED',
                       '--add-opens', 'java.base/java.nio=ALL-UNNAMED', '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
                       '--add-opens', 'java.base/java.security.cert=ALL-UNNAMED', '--add-opens', 'java.base/java.security=ALL-UNNAMED',
                       '--add-opens', 'java.base/javax.net.ssl=ALL-UNNAMED', '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
                       '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED', '--add-opens', 'java.sql/java.sql=ALL-UNNAMED',]
    }

    repositories {
        mavenLocal()
        mavenCentral()
        maven { url 'https://download.corda.net/maven/corda-releases' }
    }

    dependencies {
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
        classpath "net.corda.plugins:cordapp:$corda_gradle_plugins_version"
        classpath "net.corda.plugins:cordformation:$corda_gradle_plugins_version"
        classpath "net.corda.plugins:quasar-utils:$corda_gradle_plugins_version"
    }
}

allprojects {
    apply from: "${rootProject.projectDir}/repositories.gradle"
    apply plugin: 'kotlin'

    tasks.withType(Test) {
        jvmArgs = ['--add-opens', 'java.base/java.time=ALL-UNNAMED', '--add-opens', 'java.base/java.io=ALL-UNNAMED',
                       '--add-opens', 'java.base/java.util=ALL-UNNAMED', '--add-opens', 'java.base/java.net=ALL-UNNAMED',
                       '--add-opens', 'java.base/java.nio=ALL-UNNAMED', '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
                       '--add-opens', 'java.base/java.security.cert=ALL-UNNAMED', '--add-opens', 'java.base/java.security=ALL-UNNAMED',
                       '--add-opens', 'java.base/javax.net.ssl=ALL-UNNAMED', '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
                       '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED', '--add-opens', 'java.sql/java.sql=ALL-UNNAMED',]
    }

    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile) {
        compilerOptions {
            languageVersion = KOTLIN_1_9
            apiVersion = KOTLIN_1_9
            jvmTarget = JVM_17
            javaParameters = true   // Useful for reflection.
            freeCompilerArgs = ['-Xjvm-default=all-compatibility']
        }
    }

    java {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }

    compileJava {
        options.compilerArgs << '-parameters'
    }
}

apply plugin: 'net.corda.plugins.cordapp'
apply plugin: 'net.corda.plugins.cordformation'
apply plugin: 'net.corda.plugins.quasar-utils'

sourceSets {
    main {
        resources {
            srcDir rootProject.file("config/dev")
        }
    }
}

dependencies {
    // Corda dependencies.
    cordaProvided "$corda_os_release_group:corda-core:$corda_os_release_version"
    cordaBootstrapper ("$corda_enterprise_release_group:corda-node-api:$corda_enterprise_release_version") {
        exclude group: "ch.qos.logback", module: "logback-classic"
    }
    corda "$corda_enterprise_release_group:corda:$corda_enterprise_release_version"

    //corda "$corda_os_release_group:corda-node:$corda_os_release_version"
    //cordaBootstrapper ("$corda_os_release_group:corda-node-api:$corda_os_release_version")
    //cordaDriver "$corda_os_release_group:corda-shell:$corda_shell_version"

    cordapp "com.r3.corda.lib.tokens:tokens-contracts:$corda_tokens_release_version"
    cordapp "com.r3.corda.lib.tokens:tokens-workflows:$corda_tokens_release_version"

    cordapp "com.r3.corda.lib.solana:corda-bridging-token-contracts:$corda_bridging_token_release_version"
    cordapp "com.r3.corda.lib.solana:corda-bridging-token-workflows:$corda_bridging_token_release_version"

    cordapp "com.stockpaydividend:contracts:1.0"
    cordapp "com.stockpaydividend:workflows:1.0"

    cordaDriver "net.corda:corda-shell:$corda_shell_version"
}

cordapp {
    targetPlatformVersion corda_platform_version.toInteger()
    minimumPlatformVersion corda_platform_version.toInteger()
}


tasks.register('installQuasar', Copy) {
    destinationDir rootProject.file("lib")
    from(configurations.quasar) {
        rename 'quasar-core(.*).jar', 'quasar.jar'
    }
}

task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {

    nodeDefaults {
        projectCordapp {
            deploy = false
        }
        cordapp("com.r3.corda.lib.tokens:tokens-workflows:$corda_tokens_release_version")

        cordapp("com.stockpaydividend:contracts:1.0")
        cordapp("com.stockpaydividend:workflows:1.0")

        runSchemaMigration = true
    }
    node {
        name "O=Notary,L=London,C=GB"
        notary = [validating : false, "serviceLegalName": "O=Notary Service,L=London,C=GB"]
        p2pPort 10002
        rpcSettings {
            address("localhost:10003")
            adminAddress("localhost:10033")
        }
    }
    node {
        name "O=Solana Notary,L=Ashburn,ST=Virginia,C=US"
        notary = [validating : false, "serviceLegalName" : "O=Solana Notary Service,L=Washington,C=US"]
        // TODO add Solana settings
        p2pPort 10002
        rpcSettings {
            address("localhost:10003")
            adminAddress("localhost:10033")
        }
    }
    node {
        name "O=WayneCo,L=SF,C=US"
        p2pPort 10005
        rpcSettings {
            address("localhost:10006")
            adminAddress("localhost:10036")
        }
        rpcUsers = [[ user: "user1", "password": "test", "permissions": ["ALL"]]]
        cordapp("com.r3.corda.lib.tokens:tokens-workflows:$corda_tokens_release_version") {
            // Config to set a default notary to prevent the stock issuance flow to choose the second notary (Solana Notary)
            config """notary = "O=Notary Service,L=London,C=GB" """
        }
    }
    node {
        name "O=Shareholder,L=New York,C=US"
        p2pPort 10008
        rpcSettings {
            address("localhost:10009")
            adminAddress("localhost:10039")
        }
        rpcUsers = [[ user: "user1", "password": "test", "permissions": ["ALL"]]]
    }
    node {
        name "O=Bank,L=Washington DC,C=US"
        p2pPort 10012
        rpcSettings {
            address("localhost:10013")
            adminAddress("localhost:10043")
        }
        rpcUsers = [[ user: "user1", "password": "test", "permissions": ["ALL"]]]
    }
    node {
        name "O=Observer,L=Washington DC,C=US"
        p2pPort 10015
        rpcSettings {
            address("localhost:10016")
            adminAddress("localhost:10046")
        }
        rpcUsers = [[ user: "user1", "password": "test", "permissions": ["ALL"]]]
    }
    node {
        name "O=Bridging Authority,L=New York,C=US"
        p2pPort 10017
        rpcSettings {
            address("localhost:10018")
            adminAddress("localhost:10047")
        }
        rpcUsers = [[ user: "user1", "password": "test", "permissions": ["ALL"]]]
        cordapp("com.r3.corda.lib.solana:corda-bridging-token-contracts:$corda_bridging_token_release_version")
        cordapp("com.r3.corda.lib.solana:corda-bridging-token-workflows:$corda_bridging_token_release_version")
    }
}
